deployment/kubernetes/enricher-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: enricher-deployment
  namespace: datenstrom
spec:
  replicas: 1

  selector:
    matchLabels:                    # Match with template
      app: enricher

  # Pod template (contains same fields as a normal Pod)
  template:
    metadata:
      namespace: datenstrom
      labels:                       # Match with selector
        app: enricher
    spec:
      serviceAccountName: collector-service-role
      restartPolicy: Always
      containers:
      - name: enricher-container
        image: mths/datenstrom-enricher:latest
        imagePullPolicy: Always
