deployment/kubernetes/collector-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: collector-service
  namespace: datenstrom
spec:
  ports:
  - port: 8000
    targetPort: 8000
  selector:
    app: collector
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: collector-deployment
  namespace: datenstrom
spec:
  replicas: 1

  selector:
    matchLabels:                    # Match with template
      app: collector

  # Pod template (contains same fields as a normal Pod)
  template:
    metadata:
      namespace: datenstrom
      labels:                       # Match with selector
        app: collector
    spec:
      serviceAccountName: collector-service-role
      restartPolicy: Always
      containers:
      - name: collector-container
        image: mths/datenstrom-collector:latest
        imagePullPolicy: Always
        ports:
          - containerPort: 8000
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /health
            port: 8000
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
