deployment/kubernetes/collector-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: collector-ingress
  namespace: datenstrom
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: tracker.datenstrom.io
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: collector-service
            port:
              number: 8000
